@@ -3,7 +3,7 @@
 # This is part of the schedule project.
 
 require 5.012;
-package Schedule v6.0.2;
+package Schedule v6.1.0;
 
 use strict;
 use warnings;
@@ -30,7 +30,8 @@ if(($FindBin::Bin // '') ne '') {
 	use lib $FindBin::Bin
 }
 use Schedule::Connect ();
-use Schedule::Helpers qw(env_to_array is_nonnegative join_quoted);
+use Schedule::Helpers qw(nohup env_to_array is_nonnegative join_quoted);
+&nohup(); # execute as early as possible
 
 # Global/State variables:
 
