@@ -3,7 +3,7 @@
 # This is part of the schedule project.
 
 require 5.012;
-package ScheduleServer v6.0.2;
+package ScheduleServer v6.1.0;
 
 use strict;
 use warnings;
@@ -30,7 +30,8 @@ if(($FindBin::Bin // '') ne '') {
 	use lib $FindBin::Bin
 }
 use Schedule::Connect ();
-use Schedule::Helpers qw(env_to_array is_nonnegative);
+use Schedule::Helpers qw(nohup env_to_array is_nonnegative);
+&nohup(); # execute as early as possible
 
 # Global/State variables:
 
@@ -43,8 +44,8 @@ my $umask = 0077;
 my $skipcheck = '';
 my $uid = '';
 my $gid = '';
-my $user = 'nobody';
-my $group = 'nobody';
+my $user = 'schedule';
+my $group = 'schedule';
 my $keepuser = $<;
 my $keepgroup = $keepuser;
 
@@ -105,8 +106,15 @@ unless($keepgroup) {
 		if($group =~ m{^\w+$}) {
 			$gid = getgrnam($group);
 			unless(&is_nonnegative($gid)) {
-				$s->warning("cannot get group id of $group. Falling back to 65534");
-				$gid = 65534
+				$gid = getgrnam('nobody');
+				if(&is_nonnegative($gid)) {
+					$s->warning("failed to get group id of $group",
+						'falling back to user nobody');
+				} else {
+					$s->warning("failed to get group id of $group and of nobody",
+						'falling back to group id 65534');
+					$gid = 65534
+				}
 			}
 		} else {
 			$gid = 65534
@@ -124,8 +132,15 @@ unless($keepuser) {
 		if($user =~ m{^\w+$}) {
 			$uid = getpwnam($user);
 			unless(&is_nonnegative($uid)) {
-				$s->warning("cannot get user id of $user. Falling back to 65534");
-				$uid = 65534
+				$uid = getpwnam('nobody');
+				if(&isnonnegative($uid)) {
+					$s->warning("failed to get user id of $user",
+						'falling back to user nobody');
+				} else {
+					$s->warning("failed to get user id of $user and of nobody",
+						'falling back to user id 65534');
+					$uid = 65534
+				}
 			}
 		} else {
 			$uid = 65534
