@@ -5,7 +5,9 @@ description='server to schedule and execute queued jobs'
 
 start() {
 	ebegin 'Starting schedule-server'
-	eval start-stop-daemon -S -b -N 9 -u root -g nobody \
+	eval start-stop-daemon -S -b -N 9 \
+		-u \"\${schedule_user:-schedule}\" \
+		-g \"\${schedule_group:-schedule}\" \
 		-- schedule-server ${schedule_opts}
 	eend ${?}
 }
